Start of CPU Implementation. Opcodes 0->0x20

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,27 @@ find_package(EnTT CONFIG REQUIRED)
 # Our App!
 add_executable(${PROJECT_NAME}
     src/main.cpp
-    src/core/Hijo.cpp src/core/Hijo.h src/common/common.h src/core/events/EventManager.h src/core/events/Event.h src/core/events/Events.h src/core/input/Input.cpp src/core/input/Input.h src/core/input/Keys.h src/core/input/InputActions.h src/core/input/Mapping.h src/core/layers/GameLayerStack.cpp src/core/layers/GameLayerStack.h src/core/layers/GameLayer.h src/layers/Sandbox.cpp src/layers/Sandbox.h)
+    src/core/Hijo.cpp
+    src/core/Hijo.h
+    src/common/common.h
+    src/core/events/EventManager.h
+    src/core/events/Event.h
+    src/core/events/Events.h
+    src/core/input/Input.cpp
+    src/core/input/Input.h
+    src/core/input/Keys.h
+    src/core/input/InputActions.h
+    src/core/input/Mapping.h
+    src/core/layers/GameLayerStack.cpp
+    src/core/layers/GameLayerStack.h
+    src/core/layers/GameLayer.h
+    src/layers/Sandbox.cpp
+    src/layers/Sandbox.h
+    src/cpu/SharpSM83.cpp
+    src/cpu/SharpSM83.h
+    src/system/Gameboy.cpp
+    src/system/Gameboy.h
+    src/system/System.h)
 
 # Compile Options
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
