--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ add_executable(${PROJECT_NAME}
     src/external/imgui/imgui_tables.cpp
     src/external/imgui/imgui_widgets.cpp
     src/external/imgui/imgui.cpp src/layers/UI.cpp src/layers/UI.h
-    src/cpu/SharpSM83Opcodes.cpp src/external/imgui_extra/imgui_memory_editor.h src/cartridge/Cartridge.cpp src/cartridge/Cartridge.h src/cpu/Interrupts.cpp src/cpu/Interrupts.h src/display/LCD.cpp src/display/LCD.h src/display/PPU.cpp src/display/PPU.h)
+    src/cpu/SharpSM83Opcodes.cpp src/external/imgui_extra/imgui_memory_editor.h src/cartridge/Cartridge.cpp src/cartridge/Cartridge.h src/cpu/Interrupts.cpp src/cpu/Interrupts.h src/display/LCD.cpp src/display/LCD.h src/display/PPU.cpp src/display/PPU.h src/cpu/Timer.cpp src/cpu/Timer.h src/cpu/DMA.cpp src/cpu/DMA.h src/cpu/Stack.cpp src/cpu/Stack.h src/common/common.cpp)
 
 # Compile Options
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
