--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ add_executable(${PROJECT_NAME}
     src/cpu/DMA.cpp
     src/cpu/DMA.h
     src/cpu/Stack.cpp
-    src/cpu/Stack.h)
+    src/cpu/Stack.h src/input/Controller.cpp src/input/Controller.h)
 
 # Compile Options
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
